--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TouchMacro</string>
-    <string name="accessibility_service_description">accessibility_service_description</string>
+    <string name="accessibility_service_description">이것은 설명입니다</string>
 </resources>
